src/pages/home/home.scss
#wallet {
    page-home {
        ion-content {
            background: $dark;
        }

        .list-ios {
            margin : 0;
        }
 
        .card {
            height: 220px;
            max-height: 220px;
            width: 98%;
            margin-top: 0px;
            margin-bottom: 15px;
            padding : 6%;
            border-radius: 6%;

            .logo {
                padding : 0;
                margin-bottom: 10px;

                img {
                    height : 100%;
                    width: 100%;
                }
            }

            .card-barcode { 
                    height: 100%;
                    width : 100%;
 
                    svg {
                        height : 100%;
                        width : 100%;
                    }
            }
        }

        .add-card-wrapper {
            background: $dark;
            text-align: center; 
            padding-top: 60px;
            padding-bottom: 60px;
            border : 1px solid $gray-300;
            border-radius: 8%;
            width : 98%;
            margin : 1%;
            
            ion-icon {
                color: $gray-300;
            }

            ion-label {
                margin: 0;
                color: $gray-300;
            }
        }
}
}

